k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saldo-api-ingress
  namespace: default
  annotations:
    konghq.com/plugins: rate-limit-5pm
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /saldo
        pathType: Prefix
        backend:
          service:
            name: saldo-api
            port:
              number: 80
